--- a/s/ss/ssm/ssm-einfo.my.html
+++ b/s/ss/ssm/ssm-einfo.my.html
@@ -1,20 +1,20 @@
-<!--The following is the downloaded HTML source of the ssm-einfo.my privacy policy that was archived on 2010-05-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100527202421id_/http%3A//www.ssm-einfo.my/page.php%3Fac%3D10) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ssm-einfo.my privacy policy that was archived on 2010-09-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100921000409id_/http%3A//www.ssm-einfo.my/page.php%3Fac%3D10) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>e-Info Ver 2.7 - Home (Best viewed with IE7 &amp; Mozilla Firefox)</title>
 <style type="text/css">
-@import url(include/style/style.css);
+@import url(/include/style/style.css);
 </style>
-<script type="text/javascript" language="javascript" src="include/js/highlights.js"></script><link rel="icon" href="images/faviconeinfo.ico">
-<link rel="shortcut icon" href="images/faviconeinfo.ico">								
+<script type="text/javascript" language="javascript" src="/include/js/highlights.js"></script><link rel="icon" href="/images/faviconeinfo.ico">
+<link rel="shortcut icon" href="/images/faviconeinfo.ico">								
 </head>
 <body>
 <table cellpadding="0" cellspacing="2" border="0" width="984" align="center" bgcolor="#FFFFFF">
 	<tbody><tr>
 		<td bgcolor="#FFFFFF">
-			<img src="images/topbanner.gif" height="125" width="984">
+			<img src="/images/topbanner.gif" height="125" width="984">
 		</td>
 	</tr>
 	<tr>
@@ -22,62 +22,62 @@
 	       <div class="menu">
 
 <ul>
-<li><a href="/index.php">Home<!--[if IE 7]><!--></a><!--<![endif]-->
+<li><a href="/index.php">Home</a>
 </li>
 <li>
-<a href="/index.php?id=login">My e-Account<!--[if IE 7]><!--></a>
-<!--<![endif]-->
+<a href="/index.php?id=login">My e-Account</a>
+
 <ul>
 		</ul>
 </li>
-<li><a href="#">Our Products<!--[if IE 7]><!--></a><!--<![endif]-->
+<li><a href="#">Our Products</a>
 <!--[if lte IE 6]><table><tr><td><![endif]-->
 	<ul>
 	<li><a class="drop" href="#" title="Company Profiles">Company Profiles<!--[if IE 7]><!--></a><!--<![endif]-->
 	<!--[if lte IE 6]><table><tr><td><![endif]-->
 		<ul class="right">
-			<li><a href="/page.php?ac=4" title="Product Overview">Product Overview</a></li>
-			<li><a href="sample/sampleroc.pdf" title="Sample" target="_blank">Sample</a></li>
+			<li><a href="/page/4" title="Product Overview">Product Overview</a></li>
+			<li><a href="/sample/sampleroc.pdf" title="Sample" target="_blank">Sample</a></li>
 		</ul>
 	<!--[if lte IE 6]></td></tr></table></a><![endif]-->
 	</li>
 	<li><a class="drop" href="#" title="Business Profiles">Business Profiles<!--[if IE 7]><!--></a><!--<![endif]-->
 	<!--[if lte IE 6]><table><tr><td><![endif]-->
 		<ul class="right">
-			<li><a href="/page.php?ac=8" title="Product Overview">Product Overview</a></li>
-			<li><a href="sample/samplerob.pdf" title="Sample" target="_blank">Sample</a></li>
+			<li><a href="/page/8" title="Product Overview">Product Overview</a></li>
+			<li><a href="/sample/samplerob.pdf" title="Sample" target="_blank">Sample</a></li>
 		</ul>
 	<!--[if lte IE 6]></td></tr></table></a><![endif]-->
 	</li>
 	<li><a class="drop" href="#" title="Financial Comparison">Financial Comparison (FIN)<!--[if IE 7]><!--></a><!--<![endif]-->
 	<!--[if lte IE 6]><table><tr><td><![endif]-->
 		<ul class="right">
-			<li><a href="/page.php?ac=6" title="Product Overview">Product Overview</a></li>
-			<li><a href="sample/sampleFC.pdf" title="Sample" target="_blank">Sample</a></li>
+			<li><a href="/page/6" title="Product Overview">Product Overview</a></li>
+			<li><a href="/sample/sampleFC.pdf" title="Sample" target="_blank">Sample</a></li>
 		</ul>
 	<!--[if lte IE 6]></td></tr></table></a><![endif]-->
 	</li>
 	<li><a class="drop" href="#" title="Company Charges">Company Charges (CHG)<!--[if IE 7]><!--></a><!--<![endif]-->
 	<!--[if lte IE 6]><table><tr><td><![endif]-->
 		<ul class="right">
-			<li><a href="/page.php?ac=3" title="View Profile">Product Overview</a></li>
-			<li><a href="sample/sampleCC.pdf" title="Sample" target="_blank">Sample</a></li>
+			<li><a href="/page/3" title="View Profile">Product Overview</a></li>
+			<li><a href="/sample/sampleCC.pdf" title="Sample" target="_blank">Sample</a></li>
 		</ul>
 	<!--[if lte IE 6]></td></tr></table></a><![endif]-->
 	</li>
 	<li><a class="drop" href="#" title="Business Termination Letter">Business Termination Letter (BTL)<!--[if IE 7]><!--></a><!--<![endif]-->
 	<!--[if lte IE 6]><table><tr><td><![endif]-->
 		<ul class="right">
-			<li><a href="/page.php?ac=12" title="Product Overview">Product Overview</a></li>
-			<li><a href="sample/sampleBTL.pdf" title="Sample" target="_blank">Sample</a></li>
+			<li><a href="/page/12" title="Product Overview">Product Overview</a></li>
+			<li><a href="/sample/sampleBTL.pdf" title="Sample" target="_blank">Sample</a></li>
 		</ul>
 	<!--[if lte IE 6]></td></tr></table></a><![endif]-->
 	</li>
 	<li><a class="drop" href="#" title="e-Info Image">e-Info Image<!--[if IE 7]><!--></a><!--<![endif]-->
 	<!--[if lte IE 6]><table><tr><td><![endif]-->
 		<ul class="right">
-			<li><a href="/page.php?ac=9" title="Product Overview">Product Overview</a></li>
-			<li><a href="/page.php?ac=9" title="Sample">Sample</a></li>
+			<li><a href="/page/9" title="Product Overview">Product Overview</a></li>
+			<li><a href="/page/9" title="Sample">Sample</a></li>
 		</ul>
 	<!--[if lte IE 6]></td></tr></table></a><![endif]-->
 	</li>
@@ -85,8 +85,8 @@
 	  <!--[if IE 7]><!--></a><!--<![endif]-->
 	<!--[if lte IE 6]><table><tr><td><![endif]-->
 		<ul class="right">
-			<li><a href="/page.php?ac=5" title="Product Overview">Product Overview</a></li>
-			<li><a href="/page.php?ac=5" title="Sample">Sample</a></li>
+			<li><a href="/page/5" title="Product Overview">Product Overview</a></li>
+			<li><a href="/page/5" title="Sample">Sample</a></li>
 		</ul>
 	<!--[if lte IE 6]></td></tr></table></a><![endif]-->
 	</li>
@@ -94,44 +94,44 @@
 (WAP)	  <!--[if IE 7]><!--></a><!--<![endif]-->
 	<!--[if lte IE 6]><table><tr><td><![endif]-->
 		<ul class="right">
-			<li><a href="/page.php?ac=7" title="Product Overview">Product Overview</a></li>
-			<li><a href="/page.php?ac=7" title="Sample">Sample</a></li>
+			<li><a href="/page/7" title="Product Overview">Product Overview</a></li>
+			<li><a href="/page/7" title="Sample">Sample</a></li>
 		</ul>
 	<!--[if lte IE 6]></td></tr></table></a><![endif]-->
 	</li>
 	<li><a class="drop" href="#" title="Statistic">Best of Statistics (STA)<!--[if IE 7]><!--></a><!--<![endif]-->
 	<!--[if lte IE 6]><table><tr><td><![endif]-->
 		<ul class="right">
-			<li><a href="/page.php?ac=2" title="Product Overview">Product Overview</a></li>
-			<li><a href="sample/sampleSTAT.pdf" title="Sample" target="_blank">Sample</a></li>
+			<li><a href="/page/2" title="Product Overview">Product Overview</a></li>
+			<li><a href="/sample/sampleSTAT.pdf" title="Sample" target="_blank">Sample</a></li>
 		</ul>
 	<!--[if lte IE 6]></td></tr></table></a><![endif]-->
 	</li>
 	<li><a class="drop" href="#" title="Company Watch">Company Watch (CWH)<!--[if IE 7]><!--></a><!--<![endif]-->
 	<!--[if lte IE 6]><table><tr><td><![endif]-->
 		<ul class="right">
-			<li><a href="/page.php?ac=13" title="Product Overview">Product Overview</a></li>
-			<li><a href="/page.php?ac=13" title="Sample">Sample</a></li>
+			<li><a href="/page/13" title="Product Overview">Product Overview</a></li>
+			<li><a href="/page/13" title="Sample">Sample</a></li>
 		</ul>
 	<!--[if lte IE 6]></td></tr></table></a><![endif]-->
 	</li>
 	</ul>
 <!--[if lte IE 6]></td></tr></table></a><![endif]-->
 </li>
-<li><a href="#">News<!--[if IE 7]><!--></a><!--<![endif]-->
+<li><a href="#">News</a>
 </li>
-<li><a href="#">Knowledgebase<!--[if IE 7]><!--></a><!--<![endif]-->
+<li><a href="#">Knowledgebase</a>
 <!--[if lte IE 6]><table><tr><td><![endif]-->
 	<ul>
-	<li><a href="/page.php?ac=14" title="Companies Act 1965">Companies Act 1965</a></li>
-	<li><a href="/page.php?ac=11" title="FAQ">FAQ</a></li>
-	<li><a href="/page.php?ac=10" title="FAQ">Privacy Statement</a></li>
+	<li><a href="/page/14" title="Companies Act 1965">Companies Act 1965</a></li>
+	<li><a href="/page/11" title="FAQ">FAQ</a></li>
+	<li><a href="/page/10" title="FAQ">Privacy Statement</a></li>
 	<li><a href="/glossary/index.php?id=glossary" title="Glossary">Glossary</a></li>
 	<!--<li><a href="#" title="FAQ">Disclaimer</a></li>-->
 	</ul>
 <!--[if lte IE 6]></td></tr></table></a><![endif]-->
 </li>
-<li><a href="/index.php?id=feedback">Contact Us<!--[if IE 7]><!--></a><!--<![endif]-->
+<li><a href="/index.php?id=feedback">Contact Us</a>
 </li>
 </ul>
 
@@ -232,12 +232,12 @@ function NewWindow(mypage,myname,w,h,scroll)
 	</tr>
 	<tr>
 		<td>
-			<a href="page.php?ac=1"><img src="images/button_einfo2.gif" width="180" height="60" border="0" alt="What Is SSM e-Info?"></a>
+			<a href="/page.php?ac=1"><img src="/images/button_einfo2.gif" width="180" height="60" border="0" alt="What Is SSM e-Info?"></a>
 		</td>
 	</tr>
 	<tr>
 		<td>
-			<a href="/search/findroc.php" onclick="NewWindow(this.href,'pdf','1025','690','yes');return false"><img src="images/bttn_free_search.gif" width="180" height="60" border="0" alt="Free Search"></a>
+			<a href="/search/findroc.php" onclick="NewWindow(this.href,'pdf','1025','690','yes');return false"><img src="/images/bttn_free_search.gif" width="180" height="60" border="0" alt="Free Search"></a>
 		</td>
 	</tr>
 </tbody></table><br>
@@ -248,7 +248,7 @@ function NewWindow(mypage,myname,w,h,scroll)
 	</tr>
 	<tr>
 		<td>
-			<b><u>Total Registered with SSM</u></b><br>		</td>
+			<b><u>Total Registered with SSM</u></b><br><b>Companies</b> : 914,864<br><b>Businesses</b> : 4,316,012<br>		</td>
 		<!--td>
 			<a href="page.php?ac=4"><img src="images/button_icon_qp.gif" border="0" alt="Quick Purchase"></a>&nbsp;<a href="page.php?ac=4"><img src="images/button_icon_ep.gif" border="0" alt="Easy Purchase"></a><br>
 			<a href="page.php?ac=6"><img src="images/button_icon_fc.gif" border="0" alt="Financial Comparison"></a>&nbsp;<a href="page.php?ac=3"><img src="images/button_icon_cc.gif" border="0" alt="Company Charges"></a><br>
@@ -264,8 +264,8 @@ function NewWindow(mypage,myname,w,h,scroll)
 	</tr>
 	<tr>
 		<td>
-			<a href="/index.php?id=feedback"><img src="images/bttn_callcenter02.gif" width="180" height="180" border="0" alt="Contact Us"></a>
-			<a href="http://www.ssm.com.my" target="new"><img src="images/button_ssm.gif" width="180" height="60" border="0" alt="Suruhanjaya Syarikat Malaysia"></a>
+			<a href="/index.php?id=feedback"><img src="/images/bttn_callcenter02.gif" width="180" height="180" border="0" alt="Contact Us"></a>
+			<a href="http://www.ssm.com.my" target="new"><img src="/images/button_ssm.gif" width="180" height="60" border="0" alt="Suruhanjaya Syarikat Malaysia"></a>
 		</td>
 	</tr>
 </tbody></table><br><br>
@@ -278,23 +278,23 @@ function NewWindow(mypage,myname,w,h,scroll)
 		</td>
 	</tr>
 	<tr>
-		<td background="images/bottombar.gif" height="20" align="center">
+		<td background="/images/bottombar.gif" height="20" align="center">
 						<span class="footer">
-				| <a href="page.php?ac=10">Privacy Statement</a> | 
+				| <a href="/page.php?ac=10">Privacy Statement</a> | 
 				<!--<a href="disclaimer.html">Disclaimer</a> | -->
-				<a href="index.php?id=feedback">Contact Us</a> | 
+				<a href="/index.php?id=feedback">Contact Us</a> | 
 				<!--<a href="rss.html">RSS</a> |--> 
 			</span>
 					</td>
 	</tr>
 	<tr>
 		<td>
-			<img src="images/down_fotter.gif" width="984" height="55">
+			<img src="/images/down_fotter.gif" width="984" height="55">
 		</td>
 	</tr>
 </tbody></table>
 <center>
-  Connected to WEB4 
+  Connected to WEB6 
 </center>
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
@@ -305,6 +305,12 @@ var pageTracker = _gat._getTracker("UA-1547673-17");
 pageTracker._initData();
 pageTracker._trackPageview();
 </script>
+<!-- Woopra Code Start -->
+<script type="text/javascript" src="//static.woopra.com/js/woopra.v2.js"></script>
+<script type="text/javascript">
+woopraTracker.track();
+</script>
+<!-- Woopra Code End -->
 
 
 </body></html>
