--- a/s/sk/ski/skipmcgrath.com.html
+++ b/s/sk/ski/skipmcgrath.com.html
@@ -1,20 +1,14 @@
-<!--The following is the downloaded HTML source of the skipmcgrath.com privacy policy that was archived on 2010-03-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100305032003id_/http%3A//www.skipmcgrath.com/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the skipmcgrath.com privacy policy that was archived on 2010-09-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100921224738id_/http%3A//www.skipmcgrath.com/privacy.shtml) for the most accurate reproduction.-->
 
 <html><head>
 <title>Auction Seller's Resource Privacy Policy</title>
 <link rel="STYLESHEET" type="text/css" href="main.css">
 <meta name="robots" content="index,follow">
-<meta name="googlebot" content="index,follow">
-<meta name="msnbot" content="index,follow">
-<link rel="STYLESHEET" type="text/css" href="1main.css">
-<script type="text/javascript" src="/includes/referdetect.js"></script>
-
 
 
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<link rel="stylesheet" type="text/css" href="/includes/anylink.css">
-
+<link rel="STYLESHEET" type="text/css" href="/2main.css">
 <script type="text/javascript" src="/includes/anylink.js">
 
 /***********************************************
@@ -25,40 +19,6 @@
 
 </script>
 
-<script type="text/javascript">//<![CDATA[
-var data,nhp,ntz,rf,sr,i,d=new Date(),pageName;
-
-// The pageName variable can be customized if needed 
-pageName=location.pathname;
-
-document.cookie='__support_check=1';nhp='http';
-rf=document.referrer;sr=window.location.search;
-if(top.window.location==document.referrer
-|| (document.referrer == '' && top.window.location != ''))
-{rf=top.document.referrer;sr=top.window.location.search}
-ntz=new Date();if(location.href.substr(0,6).toLowerCase()=='https:')
-nhp='https';data='&an='+escape(navigator.appName)+
-'&sr='+escape(sr)+'&ck='+document.cookie.length+
-'&rf='+escape(rf)+'&sl='+escape(navigator.systemLanguage)+
-'&av='+escape(navigator.appVersion)+'&l='+escape(navigator.language)+
-'&pf='+escape(navigator.platform)+'&pg='+escape(pageName);
-if(navigator.appVersion.substring(0,1)>'3') {data=data+'&cd='+ 
-screen.colorDepth+'&rs='+escape(screen.width+ ' x '+screen.height)+ 
-'&tz='+ntz.getTimezoneOffset()+'&je='+ navigator.javaEnabled()}; i=new 
-Image();i.src=nhp+'://counter.hitslink.com/statistics.asp'+
-'?v=1&s=213&acct=mcgrrrrr1'+data+'&tks='+d.getTime(); //]]> </script>
-
-
-<!-- End www.hitslink.com/ statistics web tools hit counter code -->
-
-<script language="JavaScript" type="text/javascript">
-<!-- Yahoo! Inc.
-var ysm_accountid = "118MB24K8V2636D5GQ76BGHG8P8";
-document.write("<SCR" + "IPT language='JavaScript' type='text/javascript' " 
-+ "SRC=//" + "srv3.wa.marketingsolutions.yahoo.com" + "/script/ScriptServlet" + "?aid=" + ysm_accountid 
-+ "></SCR" + "IPT>");
-// -->
-</script><script language="JavaScript" type="text/javascript" src="//srv3.wa.marketingsolutions.yahoo.com/script/ScriptServlet?aid=118MB24K8V2636D5GQ76BGHG8P8"></script>
 
 
 </head>
@@ -99,14 +59,15 @@ document.write("<SCR" + "IPT language='JavaScript' type='text/javascript' "
                                                     
 <div id="anylinkmenu3" class="anylinkcss2">
 
-<a href="http://www.skipmcgrath.com/products/ebaypackage.shtml">Complete eBay Marketing System</a>
+<a href="http://www.skipmcgrath.com/products/ebay-business-system.shtml">Complete eBay Marketing System</a>
+<a href="http://www.skipmcgrath.com/products/virtual-peddler.shtml">The Virtual Peddler</a> 
 <a href="http://www.skipmcgrath.com/products/make-money-blogging-home.shtml">How to Make Money Blogging From Home</a> 
 <a href="http://www.skipmcgrath.com/products/ebay-consignment-business.shtml">How to Start &amp; Run an<br>eBay Consignment Business</a>
 <a href="http://www.skipmcgrath.com/products/info-product.shtml">How To Create &amp; Sell Information Products on eBay, Amazon and the Internet</a>
 <a href="http://www.skipmcgrath.com/products/wholesale.shtml">The eBay Wholesale Buying System</a>
 <a href="http://www.skipmcgrath.com/products/sell-used-books-ebay-amazon.php">Sell Used Books on eBay, Amazon.com and the Internet for Profit</a>
 <a href="http://www.skipmcgrath.com/products/Niche-Markets.shtml">10 eBay Niche Businesses</a>
-<a href="http://www.skipmcgrath.com/products/future-ebay-new-policies.shtml">Free eBook - eBay 2009</a>
+<a href="http://www.skipmcgrath.com/products/future-ebay-new-policies.shtml">Free eBook - eBay 2010</a>
 <a href="http://skipmcgrath.com/products/top20sales/">My Top 20 Wholesale Sources</a>
 <a href="http://www.marketingtips.com/t.cgi/46676" target="_blank">Internet Marketing Course</a> 
 <a href="http://www.skipmcgrath.com/coaching/">eBay and Internet Coaching</a> 
@@ -129,6 +90,7 @@ document.write("<SCR" + "IPT language='JavaScript' type='text/javascript' "
 
 <a href="http://www.skipmcgrath.com/ebay-tools.shtml">eBay Tools</a>
 <a href="http://www.skipmcgrath.com/auction_sr/77-tips-tools-selling-ebay.shtml">77 Tips &amp; Tools for Selling<br>&nbsp;on the New eBay</a>
+<a href="http://www.skipmcgrath.com/affiliate/">Skip's Affiliate Program</a>
 <a href="/ebaynews/">eBay News and Resources</a>
 <a href="/articles/salestax.shtml">State Sales Tax Info</a>
 <a href="/website/">Build Your Own Website</a> 
@@ -142,8 +104,8 @@ document.write("<SCR" + "IPT language='JavaScript' type='text/javascript' "
 <a href="/gowholesale.shtml" onclick="return clickreturnvalue()" onmouseover="dropdownmenu(this, event, 'anylinkmenu6')" class="pull_down_text">Web Wholesale Search</a>   
 
 <div id="anylinkmenu6" class="anylinkcss">
+<a href="http://www.getthatwholesale.com" target="_blank">Get That Wholesale</a>
 <a href="http://www.skipmcgrath.com/gowholesale.shtml">goWholesale</a>
-
 <a href="http://www.skipmcgrath.com/wholesale-sources.shtml">Wholesale Central</a>
 
 </div>
@@ -223,13 +185,13 @@ This policy is effective as of October 9, 2007. <br>
           <tbody><tr>
             <td width="133"><div align="left">
               <h2 align="center">Top Pages </h2>
-               <p><a href="http://www.skipmcgrath.com/products/ebaypackage.shtml">Learn How To Sell on eBay </a> </p>
+               <p><a href="http://www.skipmcgrath.com/products/ebay-business-system.shtml">Learn How To Sell on eBay </a> </p>
 			<p><a href="http://www.skipmcgrath.com/products/make-money-blogging-home.shtml">Make Money Blogging</a></p>
           <p><a href="http://skipmcgrath.com/products/top20sales/">My Top 20 Wholesale Sources</a></p>
 			<p><a href="http://www.skipmcgrath.com/products/Niche-Markets.shtml">Ten Niche Products for eBay Sellers</a></p>
 			<p><a href="http://www.skipmcgrath.com/products/sell-used-books-ebay-amazon.php">Make Money Selling Used Books on Amazon &amp; eBay</a></p>
 			<p><a href="http://www.skipmcgrath.com/articles/eBay-drop-shipping.shtml">How to Find Manufacturers Who Will Drop Ship</a></p>
-			<p><a href="http://www.ezauctiontools.com/product-overview.html" target="_blank">EZ Cube Digital Photo Light Tents </a></p>
+			<p><a href="http://www.ezauctiontools.com/store/ez-cube-product-overview/" target="_blank">EZ Cube Digital Photo Light Tents </a></p>
             <p><a href="http://www.skipmcgrath.com/products/info-product.shtml">Make Money with Information Products</a></p>
 			<p><a href="http://www.skipmcgrath.com/newsletters/">Free Newsletter for eBay Sellers </a></p>
 			<p><a href="http://www.skipmcgrath.com/coaching/">Personal eBay Coaching Program </a></p>
@@ -298,11 +260,7 @@ The eBay Seller's News.&nbsp; We respect your privacy.</p>
     </td>
   </tr>
 </tbody></table>
-<style type="text/css">
-<!--
-.copyright {font-family: Arial, Helvetica, sans-serif}
--->
-</style>
+
 
 <table width="100%" align="center">
 	<tbody><tr>
@@ -358,20 +316,34 @@ document.write(TheYear )
 			<a target="_blank" href="http://www.consumer-program-review.com/">
 			Consumer Protection Review</a> |
 			<a target="_blank" href="http://www.firepit-grills.com/">Firepit 
-			Grills</a> </span></div></td>
+			Grills</a> </span></div>
+		<div align="center">&nbsp;</div>
+		<div align="left" style="margin: 0 20px 10px 20px;"><span class="copyright">Please Note:
+			<span style="font-weight: 400">&nbsp;Some of the products and 
+			services mentioned in this website, in articles, banner ads and 
+			newsletters and blog posts are for products and services for which I 
+			earn a referral fee or commission. We always evaluate anything we 
+			recommend very carefully and each year we turn down literally dozens 
+			of opportunities to recommend products or services where we can earn 
+			a commission. Even though we earn a fee on some of our 
+			recommendations, we only recommend products and services that we 
+			feel will deliver good value and with rare exceptions, they all come 
+			with a money back guarantee.</span></span></div></td>
 	</tr>
-	<tr height="1">
-	    <td bgcolor="#FEE2A9" height="4"></td>
+	<tr>
+	    <td bgcolor="#FEE2A9" style="height: 4px;"></td>
 	</tr>
 </tbody></table>
 
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-</script>
 <script type="text/javascript">
-_uacct = "UA-3057264-1";
-urchinTracker();
-</script>
-
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-3057264-1");
+pageTracker._trackPageview();
+} catch(err) {}</script>
 
 
 </body></html>
