--- a/f/fi/fil/fileserve.com.html
+++ b/f/fi/fil/fileserve.com.html
@@ -1,20 +1,23 @@
-<!--The following is the downloaded HTML source of the fileserve.com privacy policy that was archived on 2010-06-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100614070703id_/http%3A//www.fileserve.com/privacy-policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the fileserve.com privacy policy that was archived on 2010-09-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100922032648id_/http%3A//fileserve.com/privacy-policy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="description" content="Share and upload files for free. Get unlimited online storage for file sharing and software file sharing. Earn money sharing popular music, images and videos with free file hosting">
+<meta name="description" content="Free 1-Click File Hosting. Easy File Distribution, Fast and Secure. Share and upload files for free. Get unlimited online storage.">
 <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7">
 <title>
 		FileServe - Privacy Policy - Free File Hosting, Online Storage &amp; File Upload
 	</title>
-<link href="/styles/base.css?5" rel="stylesheet" type="text/css">
+<link href="/styles/base.css?18" rel="stylesheet" type="text/css">
 <link rel="shortcut icon" href="/images/favicon.ico">
 <link rel="image_src" href="http://www.fileserve.com/images/fileserve_newsfeed.jpg">
-<script src="/script/jquery-1.3.2.min.js" type="text/javascript"></script>
-<script src="/script/menu.js" type="text/javascript"></script>
-<script src="/script/jsclock.js" type="text/javascript"></script>
-<script type="text/javascript" src="/script/jquery.validate.min.js"></script>
+
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+<script type="text/javascript" src="/script/fileserve.js"></script>
+
+
+
+
 <script>
 if (top != self) top.location = self.location;
 </script>
@@ -23,7 +26,13 @@ if (top != self) top.location = self.location;
 /*$(document).ready(function(){
 	$("body").append('<a href="javascript:displayOverlayDialog(\'bonus_promo\');" class="promo_tab"></a>');
 });*/
+$(document).ready(function() {
+            DD_roundies.addRule('.panel, .panel .timing, .download_boxes .premium, #login_area, .comparison .plan, .file_control, .file_control .toolbar, .dialog, .tips_message, .comparison, .payout_table, .money_signup, .news_box, .my_earnings .payable, .dashboard .account .acc_table, .manager_alert, .premium_extend, .join_box, .dialog_choose_plan, ul.highlight', '6px', true);
+            DD_roundies.addRule('.file_manager .file_control', '6px 6px 0 0', true);
+            DD_roundies.addRule('.file_manager .file_control .toolbar', '6px 6px 0 0', true);
+})
 </script>
+
 <link href="/styles/file_manager.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -33,20 +42,21 @@ if (top != self) top.location = self.location;
 
 
 
+
+
+
 <script>
 
 	$(document).ready(function(){
 		$('#login').mouseenter(function(){
 			$('#login_area').show();
-		})
+		});
 		$('#no_sign').click(function(){
 			 $("#login_area").hide();
 		});
 		
-		$(document).ready(function() {
-			$('#partner_payment_type2').change(onSelectChange);
-			$('#partner_email2').keypress(onSelectChange);
-		});
+		$('#partner_payment_type2').change(onSelectChange);
+		$('#partner_email2').keypress(onSelectChange);
 		
 		function onSelectChange(){
 			var selected = $("#partner_payment_type2 option:selected");
@@ -83,7 +93,15 @@ if (top != self) top.location = self.location;
 	            }
 	        }
 		});
-	})
+		
+		$('#sys_clock .lang_select').bind('mouseenter mouseleave', function() {
+			$('div:eq(0)', this).slideToggle(150);
+			$(this).toggleClass('hover');
+	        num = $(this).hasClass('hover') ? $('a', this).size() : 1;
+			$(this).stop(true, false).animate({ height: num * ($('a', this).height()+2) },200);
+        });
+
+	});
 	function displayOverlayDialog(layerId) {
 		window.scroll(0,0);
 		//$('#upgrade_btn').attr('disabled', true);
@@ -98,9 +116,13 @@ if (top != self) top.location = self.location;
 		$('#middle_panel').fadeTo('slow', 1);
 		$('.middle').fadeTo('slow', 1);
 	}
-		
+	
+	function changeLocale(locale) {
+    	$("#localeForm [name=locale]").val(locale);
+    	$("#localeForm").submit();
+	};
 
-	initClock('June 14, 2010 03:07:03', 'sys_clock');
+	initClock('September 21, 2010 23:27:16', 'dynamic_clock');
 </script>
 
 <style>
@@ -122,7 +144,10 @@ input.bonuspromo {display:inline; padding:1px;}
 
 <div id="header">
 	<a href="/" id="logo" alt="Free File Hosting &amp; File Upload with FileServe."><span>FileServe</span></a>
-	<div class="sys_clock" id="sys_clock">03:07 AM, 14 June 2010 EST</div>
+	<div class="sys_clock" id="sys_clock">
+		<span id="dynamic_clock">11:27 PM, 21 September 2010 EST</span>
+				<form id="localeForm" name="localeForm" action="/privacy-policy.php" method="post"><input name="locale" type="hidden" value=""></form>
+	</div>
 				<div id="menu">
 			<div class="menu_tag off_left"></div>
 <div id="menu_upload" class="menu_tag off_right_off"><a href="/upload-file.php">Upload</a></div>
@@ -169,9 +194,9 @@ input.bonuspromo {display:inline; padding:1px;}
 			</div>
 			</form>
 		</div>
-	<div class="clear"></div>
+	
+<div class="clear"></div>
 </div>
-
 <!---promo-->
 <div id="bonus_promo" class="dialog_overlay" style="display:none;">
 	<div class="dialog promo">
@@ -199,7 +224,7 @@ input.bonuspromo {display:inline; padding:1px;}
                 <p>When you register on our Site, you hereby agree and acknowledge that your Personal Information will be placed into the FileServe database and that such Personal Information shall be shared with third parties for marketing purposes.</p>
                 <h4>Personal Information that We Collect from You</h4>
                 <p>By registering with, or providing Personal Information on, the Site, users allow us and our affiliates to make their Personal Information available to third parties in accordance with the terms of this Privacy Policy, and to otherwise provide marketing offers to such users.  While on the Site, submitting an application to become a Member or utilizing the Services, we may collect "Personal Information" from you.  For the purposes of this Privacy Policy, Personal Information shall mean individually identifiable information from or about an individual including, but not limited to, the individual's: (a) e-mail address; (b) Facebook® account ID; (c) credit card information or PayPal® information (depending on your preferred means of payment); and/or (d) any other information requested on the applicable registration form.  For purposes of this Privacy Policy, items (b) and (c) in the preceding sentence shall be referred to as "Sensitive Information."</p>
-                <p><b>For purposes of this Privacy Policy, "Facebook" shall mean Facebook Inc. Please be advised that FileServe is not in any way affiliated with Facebook, and the Site and Services are neither endorsed, nor sponsored, by Facebook.  Facebook® is a registered trademark of Facebook Inc.</b></p>
+                <p><b>For purposes of this Privacy Policy, Facebook shall mean Facebook Inc. Please be advised that FileServe is not in any way affiliated with Facebook, and the Site and Services are neither endorsed, nor sponsored, by Facebook.  Facebook® is a registered trademark of Facebook Inc.</b></p>
                 <p><b>For purposes of Privacy Policy, "PayPal" shall mean PayPal, Inc. Please be advised that FileServe is not in any way affiliated with PayPal, and the Site and Services are neither endorsed, nor sponsored, by PayPal.  PayPal ® is a registered trademark of PayPal, Inc.</b></p>
                 <h4>How We Use Personal Information</h4>
                 <p>The Personal Information that you submit to us remains your property, but by submitting such information to us you grant us the right, subject to applicable state and federal law, to use the Personal Information (other than Sensitive Information) for marketing purposes.  Without limiting the generality of the foregoing, we reserve the right to share, sell, rent, lease and/or otherwise distribute any and all Personal Information (other than Sensitive Information) with/to any third-party for any and all uses permitted by this Privacy Policy and applicable law.  These third parties may include, but shall not be limited to: (a) providers of direct marketing services and applications, including lookup and reference, data enhancement, suppression and validation; (b) e-mail marketers; (c) telemarketers (where and to the extent permitted by applicable law); (d) SMS text-based marketers (where and to the extent permitted by applicable law); and (e) direct marketers.</p>
@@ -220,7 +245,7 @@ input.bonuspromo {display:inline; padding:1px;}
                 <p>We use demographic information to tailor the Site and/or Services to the interests of our users.  Demographic information is shared with third party advertisers so that they can tailor their advertisements to the appropriate audience. Demographic information may also be shared with other third parties.</p>
                 <p>We reserve the right to provide aggregate or group data about our users for lawful purposes. Aggregate or group data is data that describes the demographics, usage or characteristics of our participants as a group, without disclosing personally identifiable information.  By becoming a Member, you agree to allow us to provide such aggregate data to third parties.  By agreeing to the terms of this Privacy Policy, you hereby consent to the disclosure of any record or communication to any third party when we, in our sole discretion, determine the disclosure to be appropriate.</p>
                 <h4>Other Websites</h4>
-                <p>This Site may contain links to third-party owned and/or operated websites.  FileServe is not responsible for the privacy practices or the content of such websites.  In some cases, you may be able to make a purchase through one of these third-party websites.  In these instances, you may be required to provide certain information, such as a credit card number, to register or complete a transaction at such website.  These third-party websites have separate privacy and data collection practices and FileServe has no responsibility or liability relating to them.</p>
+                <p></p>
                 <h4>Our Security Precautions</h4>
                 <p>We endeavor to safeguard and protect our users' information.  The privacy of your Personal Information is very important to us.  The servers that we store personally identifiable information in are kept in a secure physical environment.  We have security measures in place to protect the loss, misuse and alteration of Personal Information under our control.  When our registration/application process asks users to enter Sensitive Information, and when we store and transmit such Sensitive Information, that information is encrypted and protected with SSL encryption software.  While we use SSL encryption to protect Sensitive Information online, we also do everything in our power to protect all user information off-line and online.  Unfortunately, no data transmission over the Internet can be guaranteed to be 100% secure.  As a result, while we strive to protect your Personal Information, we cannot ensure or warrant the security of any information that you transmit to us, and you do so at your own risk.</p>
                 <p>However, access to your information is strictly limited, and not accessible to the public. All of our users' information is restricted in our offices. Only employees who need the information to perform a specific job are granted access to Personal Information.  Our employees are dedicated to ensuring the security and privacy of all user information. Employees not adhering to our firm policies are subject to disciplinary action.  In compliance with applicable federal and state laws, we shall notify you and any applicable regulatory agencies in the event that we learn of an information security breach with respect to your Personal Information.  You will be notified via e-mail in the event of such a breach.  Please be advised that notice may be delayed in order to address the needs of law enforcement, determine the scope of network damage, and to engage in remedial measures.</p>
@@ -238,22 +263,24 @@ input.bonuspromo {display:inline; padding:1px;}
         </div>
         <div class="tail"></div>
     </div>
-    <div id="footer" class="footer">
+    
+<div id="footer" class="footer">
 	<div>
 	<ul>
 		<li class="title">Features</li>
-		<li><a href="/upload-multiple-files.php">Upload&nbsp;Multiple&nbsp;Files</a></li>
-		<li><a href="/remote-upload.php">Remote&nbsp;Upload</a></li>
-		<li><a href="/ftp-upload.php">FTP&nbsp;Upload</a></li>
-		<li><a href="/partner-info.php">Become&nbsp;an&nbsp;Affiliate</a></li>
-		<li><a href="/link-checker.php">Check&nbsp;FileServe&nbsp;Links</a></li>
-		<li><a href="/about-free-file-hosting.php">About&nbsp;Free&nbsp;File&nbsp;Hosting</a></li>
+		<li><a href="/upload-multiple-files.php">Upload Multiple Files</a></li>
+		<li><a href="/remote-upload.php">Remote Upload</a></li>
+		<li><a href="/ftp-upload.php">FTP Upload</a></li>
+		<li><a href="/partner-info.php">Become an Affiliate</a></li>
+		<li><a href="/link-checker.php">Check FileServe Links</a></li>
+		<li><a href="/about-free-file-hosting.php">About Free File Hosting</a></li>
 	</ul>
 	<ul>
 		<li class="title">Account</li>
-	    <li><a href="/signup.php">Login</a></li>
-	    <li><a href="/signup.php">Signup&nbsp;for&nbsp;Free</a></li>
-	    <li><a href="/premium.php">Become&nbsp;a&nbsp;Premium&nbsp;User</a></li>
+	    <li><a href="/login.php">Login</a></li>
+	    <li><a href="/signup.php">Signup for Free</a></li>
+	    <li><a href="/premium.php">Become a Premium User</a></li>
+	    <li><a href="/redeem.php">Redeem</a></li>
 	</ul>
 	<ul>
 		<li class="title">Support</li>
@@ -261,20 +288,20 @@ input.bonuspromo {display:inline; padding:1px;}
 	    <li><a href="/faq.php">FAQ</a></li>
 	    <li><a href="/dmca.php">DMCA</a></li>
 	    <li><a href="/help.php">Help</a></li>
-	    <li><a href="/terms.php">Terms&nbsp;of&nbsp;Use</a></li>
-	    <li><a href="/privacy-policy.php">Privacy&nbsp;Policy</a></li>
-	    <li><a href="/sitemap.php">Site&nbsp;Map</a></li>
+	    <li><a href="/terms.php">Terms of Use</a></li>
+	    <li><a href="/sitemap.php">Site Map</a></li>
+	    <li><a href="/privacy-policy.php">Privacy Policy</a></li>
 	</ul>
 	<ul>
 		<li class="title">Contact</li>
-	    <li><a href="/advertise-with-us.php">Advertise&nbsp;with&nbsp;us</a></li>
+	    <li><a href="/advertise-with-us.php">Advertise with us</a></li>
 	    <li><a href="/about-us.php">About us</a></li>
-	    <li><a href="/contact-us.php">Contact&nbsp;us</a></li>
-        <li><a href="/link-to-us.php">Link&nbsp;to&nbsp;us</a></li>
+	    <li><a href="/contact-us.php">Contact us</a></li>
+        <li><a href="/link-to-us.php">Link to us</a></li>
 	</ul>
 	<div class="clear"></div>
     <p>Copyright © 2010 FileServe, All Rights Reserved</p>
-    <h3 class="footer_bottom">Share and upload files for free with FileServe. Get unlimited online storage for file sharing<br>and software file sharing. Earn money sharing popular music, images and videos with free file hosting.</h3>
+    <h3 class="footer_bottom">Free 1-Click File Hosting. Easy File Distribution, Fast and Secure. <br>Get unlimited online storage.</h3>
 	</div>
 </div>
 
@@ -288,6 +315,7 @@ try {
 var pageTracker = _gat._getTracker("UA-15255203-1");
 pageTracker._trackPageview();
 } catch(err) {}</script>
+
 
 
 </body></html>
